# mgr-amgf

./: .gitignore  CMakeLists.txt  README.md  amgf_mgr_minimal.c  amgf_mgr_minimal.h  build.sh  mgr_driver_gmres.c
test/blocks-unsym-ls_00001/: IJ.out.A.00000  IJ.out.b.00000  dofmap.out.00000
